# GamingTools

./: AGENTS.md  README.md  RunBuild.bat  RunDev.bat  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/foreground/: mod.rs
src-tauri/src/input/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/macros/: mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/recorder/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/screen/: mod.rs
src-tauri/src/tablets/: mod.rs
src/features/app-guard/: AppGuardSettings.tsx
src/features/inventory-stash/: InventoryGridOverlay.tsx  InventoryStash.tsx
src/features/macro-recorder/: MacroRecorder.tsx
src/features/macros/: MacroBuilder.tsx  MacroInspector.tsx  macroTiming.ts
src/features/pixel-trigger/: PixelActionInspector.tsx  PixelTrigger.tsx  pixelRuleValidation.ts
src/features/profile-transfer/: ProfileTransfer.tsx
src/features/profiles/: ProfileRail.tsx  ProfileSettings.tsx
src/features/settings/: SettingsPanel.tsx
src/features/tablet-scanner/: TabletScanner.tsx
src/features/toggle-hold/: ToggleHold.tsx  toggleHoldValidation.ts
src/shared/api/: client.ts
src/shared/types/: profile.ts
src/shared/ui/: Button.tsx  KeyCaptureButton.tsx  RulePicker.tsx  Tabs.tsx
